Change IRC to Matrix and fix typo on Careers page.

--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -58,7 +58,7 @@
         {{ _('Thunderbird is looking for a multi-skilled self-starter to work partly on release engineering, and partly on operating the cloud based web infrastructure around Thunderbird. You will be working in close cooperation with our release engineer, infra engineer and other staff, as well as with community members.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, IRC, and Bugzilla.') }}
+        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, Matrix, and Bugzilla.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
         {{ _('As a release engineer you will be serving the community, empowering them to make their contributions available to millions of people worldwide. Your focus will be on developing and maintaining the systems that are used for continuous integration and for making the final builds of the software available to end users. A large part of this is following and adjusting to improvements made by the Firefox release engineering team, since Thunderbird uses very similar tools and procedures. You will collaborate with <strong>QA</strong>, <strong>security</strong>, <strong>localization</strong>, and engineering to ship beta and release builds.') }}
@@ -114,7 +114,7 @@
         {{ _('As an engineer at Thunderbird, you will be working with existing staff and community members from all over the globe. We work very much in the open, and you’ll be able to show your skills to the world both on the code level and as a concrete result in improvements on the product.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, IRC, and Bugzilla.') }}
+        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, Matrix, and Bugzilla.') }}
       </p>
     </aside>
     <aside>
@@ -190,7 +190,7 @@
         {{ _('As an engineer at Thunderbird, you’ll be working with existing staff and community members from all over the globe. We work very much in the open, and you’ll be able to show your skills to the world both on the code level and as a concrete results in improvements on the product.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, IRC, and Bugzilla.') }}
+        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, Matrix, and Bugzilla.') }}
       </p>
     </aside>
     <aside>
@@ -260,7 +260,7 @@
         {{ _('At Thunderbird, you’ll be working with existing staff and community members from all over the globe. We work very much in the open, and you’ll be able to show your skills to the world.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, IRC, and Bugzilla.') }}
+        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, Matrix, and Bugzilla.') }}
       </p>
     </aside>
     <aside>
@@ -330,7 +330,7 @@
         {{ _('At Thunderbird, you’ll be working with existing staff and community members from all over the globe. We work very much in the open, and you’ll be able to show your skills to the world.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, IRC, and Bugzilla.') }}
+        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, Matrix, and Bugzilla.') }}
       </p>
     </aside>
     <aside>
@@ -357,7 +357,7 @@
       <h4 class="subheader-section">{{ _('We’re looking for someone with:') }}</h4>
       <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
         <li>
-          {{ _('Great written communication skills. (English required, Germany or French is a plus.)') }}
+          {{ _('Great written communication skills. (English required, German and/or French is a plus.)') }}
         </li>
         <li>
           {{ _('Great technical problem solving abilities.') }}
