Change IRC references to Matrix throughout the website.

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -158,7 +158,7 @@
           </aside>
         </h3>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-          {{ _('Please share ideas and concepts by posting them on <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird&bug_severity=enhancement">Bugzilla</a>.<br/>You can also discuss design in the <a href="irc://irc.mozilla.org/maildev">#maildev</a> irc channel, or the <a href="https://discourse.mozilla.org/c/thunderbird">Discourse category</a>.') }}
+          {{ _('Please share ideas and concepts by posting them on <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird&bug_severity=enhancement">Bugzilla</a>.<br/>You can also discuss design in the <a href="https://chat.mozilla.org/#/room/#thunderbird:mozilla.org">#maildev</a> Matrix channel, or the <a href="https://discourse.mozilla.org/c/thunderbird">Discourse category</a>.') }}
         </p>
       </aside>
 
@@ -305,22 +305,17 @@
 
       <aside class="flex flex-col w-full lg:w-1/2">
         <article class="flex flex-col w-full mb-6 lg:pl-8">
-          <h4 class="subheader-section">{{ _('IRC Channels on irc.mozilla.org') }}</h4>
+          <h4 class="subheader-section">{{ _('Matrix Channels on chat.mozilla.org') }}</h4>
           <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-            {{ _('You can use <a href="https://mibbit.com/">Mibbit.com</a> if you don’t already have a preferred IRC client..') }}
+            {{ _('You can use the <a href="https://riot.im/download/desktop/">Riot desktop client</a> if you don’t want to use a browser. Set the home server to "mozilla.modular.im".') }}
           </p>
           <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
             <li>
-              {{ _('<a href="irc://irc.mozilla.org/maildev">#maildev</a> - For hacking on Thunderbird.') }}</li>
-            <li>
-              {{ _('<a href="irc://irc.mozilla.org/extdev">#extdev</a> - For building Thunderbird add-ons/extensions.') }}
+              {{ _('<a href="https://chat.mozilla.org/#/room/#thunderbird:mozilla.org">#thunderbird</a> - For general questions and support.') }}
             </li>
             <li>
-              {{ _('<a href="irc://irc.mozilla.org/thunderbird">#thunderbird</a> - For general questions and support.') }}
+              {{ _('<a href="https://chat.mozilla.org/#/room/#maildev:mozilla.org">#maildev</a> - For hacking on Thunderbird.') }}
             </li>
-            <li>
-              {{ _('<a href="irc://irc.mozilla.org/tb-qa">#tb-qa</a> - For QA chat.') }}</li>
-          </ul>
         </article>
       </aside>
 
