--- a/website/contact/index.html
+++ b/website/contact/index.html
@@ -44,10 +44,10 @@
 
       <article class="flex flex-col p-4 flex-1 lg:max-w-sm mb-10 lg:mb-0 bg-white rounded shadow-lg">
         <h4 class="mt-0 mb-4 uppercase text-blue font-md">
-          {{ _('<a href="irc://irc.mozilla.org/thunderbird" class="header-link">Live Chat on IRC</a>') }}
+          {{ _('<a href="https://chat.mozilla.org/#/room/#thunderbird:mozilla.org" class="header-link">Live Chat on Matrix</a>') }}
         </h4>
         <p class="mt-0 mb-6 flex-1 p-links-blue">
-          {{ _('You can chat with other users and members of the Thunderbird team on the <a href="irc://irc.mozilla.org/thunderbird">#thunderbird channel on Mozilla’s IRC</a>. You can set up IRC in Thunderbird by following the <a href="https://support.mozilla.org/kb/instant-messaging-and-chat#w_configuring-chat">instructions on SUMO</a>.') }}
+          {{ _('You can chat with other users and members of the Thunderbird team on the <a href="https://chat.mozilla.org/#/room/#thunderbird:mozilla.org">#thunderbird channel on Mozilla’s Matrix chat server</a>. You can log onto Matrix by <a href="https://wiki.mozilla.org/Matrix">following instructions on the wiki</a>. Matrix support in Thunderbird Chat is coming soon!') }}
         </p>
       </article>
     </section>
