Add latest version to data attribute on download pages.
I'm working on adding support for Thunderbird to Pollbot (https://github.com/mozilla/PollBot)
with the goal of having something similar to https://mozilla.github.io/delivery-dashboard/.

One feature of Pollbot is it scrapes the latest Firefox version out of the various download
pages on www.mozilla.org in order to check that it matches what's provided by product-details.
The easiest way to do that is to have a data attribute somewhere in the page. To make it
easier to write the query selector, I added the id attribute on the element as well.

--- a/website/thunderbird/all/index.html
+++ b/website/thunderbird/all/index.html
@@ -79,7 +79,7 @@
     </section>
   </section>
 
-  <section class="pb-10 w-full bg-grey-lighter">
+  <section id="all-downloads" class="pb-10 w-full bg-grey-lighter" data-thunderbird-version="{{ latest_thunderbird_version }}">
     <section class="flex max-w-6xl mx-auto pl-8 pr-8">
       <aside class="flex flex-col w-full pr-8 pl-8">
         {{ build_table(platforms, full_builds) }}
