Added equal opportunity note to the careers page.

--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -394,6 +394,9 @@
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
           {{ _('The successful applicant will be hired through the third-party service Upwork. Your work will be directed through the Thunderbird project’s technical manager. By applying for this job, you are agreeing to have your application reviewed by Thunderbird contractors and volunteers who are a part of the hiring committee as well as by staff members at the Mozilla Foundation and companies under its umbrella.') }}
         </p>
+        <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
+          {{ _('We are an equal opportunity employer and value diversity. We do not discriminate on the basis of race, religion, color, national origin, gender, sexual orientation, age, marital status, veteran status, or disability status.') }}
+        </p>
       </aside>
     </section>
   </section>
