Fix mailto link on careers page

--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -386,7 +386,7 @@
           </aside>
         </h3>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-          {{ _('If a position sounds like a good fit for you, please send us your resume with a cover letter to <a href="mailto=%(jobs_email)s">jobs@thunderbird.net</a>. In the subject of the email, please state the title of the position that you’re applying for, e.g. <strong>“Application for the Thunderbird Software Engineer position”</strong>.')|format(jobs_email='jobs@thunderbird.net') }}
+          {{ _('If a position sounds like a good fit for you, please send us your resume with a cover letter to <a href="mailto:%(jobs_email)s">jobs@thunderbird.net</a>. In the subject of the email, please state the title of the position that you’re applying for, e.g. <strong>“Application for the Thunderbird Software Engineer position”</strong>.')|format(jobs_email='jobs@thunderbird.net') }}
         </p>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
           {{ _('A cover letter is essential to your application! Tell us about why you’re passionate about Thunderbird and this position. Also include samples of your work, either directly or as a link. If you contribute to any open source software, or maintain a blog we’d love to hear about it!') }}
