Change contact page text to eliminate mentions of 'account' and 'email'.

--- a/website/contact/index.html
+++ b/website/contact/index.html
@@ -59,7 +59,7 @@
         <article class="flex flex-col w-full mb-6 lg:pr-8">
           <h4 class="subheader-section">{{ _('Security') }}</h4>
           <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-            {{ _('To report a security issue related to Thunderbird, please register an account at <a href="https://bugzilla.mozilla.org/">Bugzilla</a>, and describe the issue in a new Thunderbird <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird">bug report</a>. If you select the <i>Security checkmark</i> before you submit, then only members of our security team will have access to your report.') }}
+            {{ _('To report a security issue related to Thunderbird, describe the issue in a new Thunderbird <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird">bug report on Bugzilla</a>. If you select the <i>Security checkmark</i> before you submit, then only members of our security team will have access to your report.') }}
           </p>
           <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
             {{ _('Bugzilla is also our preferred medium for coordinating the disclosure of security incidents and for discussing embargo dates. If you don’t get a timely response in Bugzilla, please contact us at <a href="mailto:security@thunderbird.net">security@thunderbird.net</a> and mention the respective bug numbers. Encrypted email can be arranged on demand.') }}
@@ -71,7 +71,7 @@
         <article class="flex flex-col w-full mb-6 lg:pl-8">
           <h4 class="subheader-section">{{ _('Partnerships') }}</h4>
           <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-            {{ _('Are you interested in partnering with the Thunderbird project? Do you provide services that could improve the experience of using Thunderbird? Do you deploy Thunderbird at scale and want to provide a better experience for your users? Please Email us at <a href="mailto:partnerships@thunderbird.net">partnerships@thunderbird.net</a>.') }}
+            {{ _('Are you interested in partnering with the Thunderbird project? Do you provide services that could improve the experience of using Thunderbird? Do you deploy Thunderbird at scale and want to provide a better experience for your users? Please send us your proposal at <a href="mailto:partnerships@thunderbird.net">partnerships@thunderbird.net</a>.') }}
           </p>
         </article>
 
