Remove download button from Lightning page since it's now integrated.

--- a/website/calendar/index.html
+++ b/website/calendar/index.html
@@ -21,21 +21,13 @@
         <aside class="flex flex-col">
           {{ _('Lightning Calendar')}}
           <small class="font-normal font-md tracking-normal normal-case">
-            {{ _('Organize your life &mdash; it&rsquo;s about time!') }}
+            {{ _('Organize your life — it’s about time!') }}
           </small>
         </aside>
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-6">
-        {{ _('Organize your schedule and life&rsquo;s important events in a calendar that&rsquo;s fully integrated with your Thunderbird or Seamonkey email. Manage multiple calendars, create your daily to do list, invite friends to events, and subscribe to public calendars.') }}
+        {{ _('Organize your schedule and life’s important events in a calendar that’s fully integrated with your Thunderbird or Seamonkey email. Manage multiple calendars, create your daily to do list, invite friends to events, and subscribe to public calendars.') }}
       </p>
-      <aside class="ml-0 mr-0 self-start text-left text-blue font-semibold">
-        <a href="https://addons.thunderbird.net/addon/lightning/" class="btn-join self-start">
-          {{_('Free Download')}}
-        </a>
-        <p class="font-sm mt-0 text-blue font-semibold self-start">
-          <a href="https://addons.thunderbird.net/addon/lightning/versions/" class="small-link text-blue"
-           >{{ _('Other Systems &amp; Versions') }}</a>
-        </p>
       </aside>
     </aside>
 
