Update directions for submitting holiday calendar files.

--- a/website/calendar/holidays/index.html
+++ b/website/calendar/holidays/index.html
@@ -99,9 +99,8 @@
             {{ _('Right-click on this calendar and choose "Export Calendar". Please use the iCalendar (ics) format.') }}
           </li>
           <li class="p-links-blue">
-            {{ _('Open a bug in <a href="%s">Bugzilla</a>.')|format('http://bugzilla.mozilla.org/enter_bug.cgi?product=Calendar&component=Website') }}
+            {{ _('Create a Pull Request or file an Issue on the <a href="%s">website repository</a> and attach your holiday file.')|format('https://github.com/thundernest/thunderbird-website') }}
           </li>
-          <li>{{ _('Add your holiday file as an attachment in the new bug.') }}</li>
         </ol>
       </aside>
     </section>
