Remove download button from holiday calendar page.

--- a/website/calendar/holidays/index.html
+++ b/website/calendar/holidays/index.html
@@ -26,20 +26,11 @@
         </aside>
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-        {{ _('We&rsquo;ve got some holiday calendar files available for download. You can either download and then import them into Sunbird or Lightning or you can just subscribe to these calendars by copying their URL and then adding them as new remote calendar files. More information on installing a holiday calendar can be found in the <a href="%s">Adding a holiday calendar article</a>.')|format('https://support.mozilla.org/kb/adding-a-holiday-calendar') }}
+        {{ _('We’ve got some holiday calendar files available for download. You can either download and then import them into Sunbird or Lightning or you can just subscribe to these calendars by copying their URL and then adding them as new remote calendar files. More information on installing a holiday calendar can be found in the <a href="%s">Adding a holiday calendar article</a>.')|format('https://support.mozilla.org/kb/adding-a-holiday-calendar') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 mt-0 p-links-blue">
         {{ _('You can also find calendars to subscribe to at <a href="%s">iCalShare.com</a>.')|format('http://icalshare.com') }}
       </p>
-      <aside class="ml-0 mr-0 self-start text-left text-blue font-semibold">
-        <a href="https://addons.thunderbird.net/addon/lightning/" class="btn-join self-start">
-          {{_('Download Lightning')}}
-        </a>
-        <p class="font-sm mt-0 text-blue font-semibold self-start">
-          <a href="https://addons.thunderbird.net/addon/lightning/versions/" class="small-link text-blue"
-           >{{ _('Other Systems &amp; Versions') }}</a>
-        </p>
-      </aside>
     </aside>
   </section>
 
