--- a/website/thunderbird/78/whatsnew/index.html
+++ b/website/thunderbird/78/whatsnew/index.html
@@ -19,43 +19,57 @@
   <section class="pt-20 pb-20 flex justify-center bg-calendar">
     <aside class="flex flex-col flex-1 max-w-6xl ml-16 mr-16">
       <!-- Add half screenshot of dark theme -->
-      <img class="w-full h-auto mb-10 max-w-lg self-center shadow-lg" src="{{ static('/media/img/thunderbird/features/dark-theme.png') }}" alt="">
+      <img class="w-full h-auto mb-10 max-w-lg self-center shadow-lg" src="{{ static('/media/img/thunderbird/whatsnew/78/Dark-Mode.png') }}" alt="Thunderbird Dark Mode screenshot">
       <h3 class="header-section">
         <span>{{ svg('customize') }}</span>
         {{ _('Dark mode')}}
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-10">
-        {{ _('There is now a dark mode in Thunderbird, making working on email late at night easier on the eyes. Thunderbird will look at your operating system settings to see if you have enabled dark mode OS-wide and respect those settings.') }}
+        {{ _('There is now a dark mode in Thunderbird, making working on email late at night easier on the eyes. To enable, Thunderbird will look at your operating system settings to see if you have enabled dark mode OS-wide.') }}
       </p>
     </aside>
   </section>
 
   <section class="pb-10 flex flex-col lg:flex-row max-w-6xl mx-auto justify-between pl-8 pr-8">
     <aside class="flex flex-col flex-1 lg:max-w-lg">
-      <img class="w-full h-auto mb-10 max-w-sm self-center shadow-lg" src="{{ static('/media/img/thunderbird/features/filelink.png') }}" alt="">
+      <img class="w-full h-auto mb-10 max-w-lg self-center shadow-lg" src="{{ static('/media/img/thunderbird/whatsnew/78/account-setup.png') }}" alt="New Account Setup and Account Central screenshot.">
       <h3 class="header-section">
         <span>{{ svg('link') }}</span>
-        {{ _('Filelink Improved')}}
+        {{ _('Account Setup & Account Central Updated')}}
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-8 mt-0">
-        {{ _('Filelink attachments that have already been uploaded can now be linked to again instead of having to re-upload them. Also, an account is no longer required to use the default Filelink provider - <strong>WeTransfer</strong>.') }}
+        {{ _('The Account Setup window and the Account Central tab, which appears when you do not have an account setup or when you select an existing account in the folder tree, have both been updated.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1 p-links-blue">
-        {{ _('Other Filelink providers like Box and Dropbox are not included by default, but can be added by grabbing the <a href="%(dropbox)s">Dropbox</a> and <a href="%(box)s">Box</a> add-ons.')|format(dropbox='https://addons.thunderbird.net/thunderbird/addon/filelink-provider-for-dropbox/',box='https://addons.thunderbird.net/thunderbird/addon/filelink-provider-for-box/') }}
+        {{ _('The layout and dialogues have been improved in order to make it easier to understand the information displayed and to find relevant settings. The Account Central tab also has new information about the Thunderbird project and displays the version you are using.') }}
       </p>
     </aside>
 
     <aside class="flex flex-col flex-1 lg:max-w-lg mt-10 lg:mt-0">
-      <img class="w-full h-auto mb-10 max-w-sm self-center shadow-lg" src="{{ static('/media/img/thunderbird/features/preferences-in-tab.png') }}" alt="">
+      <img class="w-full h-auto mb-10 max-w-lg self-center shadow-lg" src="{{ static('/media/img/thunderbird/whatsnew/78/compose-window.png') }}" alt="Screenshot showing various updates to the compose window for 78.">
       <h3 class="header-section">
         <span>{{ svg('settings') }}</span>
         {{ _('Options/Preferences in a Tab')}}
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-8 mt-0">
-        {{ _('Thunderbirdʼs Options/Preferences have been converted from a dialog window to its own dedicated tab. The new Preferences tab provides more space which allows for better organized content and is more consistent with the look and feel of the rest of Thunderbird.') }}
+        {{ _('The compose window has been reworked to help users find features more easily and to make composing a message faster and more straightforward. The compose window now also takes up less space with recipients listed in “pills” instead of an entire line for every address.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
-        {{ _('The new Preferences tab also makes it easier to multi-task without the problem of losing track of where your preferences are when switching between windows.') }}
+        {{ _('The redesigned compose window makes it easier for the management of many email recipients, and the new intuitive layout for the window it easier to discover its features.') }}
+      </p>
+    </aside>
+  </section>
+
+  <section class="pt-20 pb-20 flex justify-center bg-calendar">
+    <aside class="flex flex-col flex-1 max-w-6xl ml-16 mr-16">
+      <!-- Add half screenshot of dark theme -->
+      <img class="w-full h-auto mb-10 max-w-lg self-center shadow-lg" src="{{ static('/media/img/thunderbird/whatsnew/78/e2eprefs.png') }}" alt="Screenshot of the PGP preferences window.">
+      <h3 class="header-section">
+        <span>{{ svg('customize') }}</span>
+        {{ _('End-to-End Encrypted Email Support')}}
+      </h3>
+      <p class="font-lg tracking-wider leading-loose mb-10">
+        {{ _('End-to-end encryption for email can be used to ensure that only the sender and the recipients of a message can read the contents. Without this protection it is easy for network administrators, email providers and government agencies to read your messages. If you would like to learn more about how end-to-end encryption in Thunderbird works, check out our article: <a href="%(encryption)s">Introduction to End-to-end encryption in Thunderbird</a>.')|format(encryption='https://www.thunderbird.net/en-US/thunderbird/78.0/releasenotes/') }}
       </p>
     </aside>
   </section>
@@ -67,10 +81,10 @@
         {{ _('Other Notable Changes')}}
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-6">
-        {{ _('There are many other smaller changes that make Thunderbird 68 feel polished and powerful including: a new App Menu UI, an updated To/CC/BCC selector in compose, improved attachment management, full color support across the app, filters can now be set to run periodically, and feed articles now show external attachments as links.') }}
+        {{ _('There are many other big changes that make Thunderbird 78 a very large release including: calendar and tasks are now integrated into Thunderbird, folder icons are now updated and their colors are customizable, the preferences are now searchable, and minimize to tray is now supported on Windows.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('There are many other updates in this release, you can see a list of all of them in the <a href="%(release)s">Thunderbird 68 release notes</a>.')|format(release='https://www.thunderbird.net/en-US/thunderbird/68.0/releasenotes/') }}
+        {{ _('There are many other updates in this release, you can see a list of all of them in the <a href="%(release)s">Thunderbird 78 release notes</a>.')|format(release='https://www.thunderbird.net/en-US/thunderbird/78.0/releasenotes/') }}
       </p>
     </aside>
   </section>
