Some copy adjustments to 78 whatsnew page.

--- a/website/thunderbird/78.0/whatsnew/index.html
+++ b/website/thunderbird/78.0/whatsnew/index.html
@@ -25,7 +25,7 @@
         {{ _('Dark mode')}}
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-10">
-        {{ _('There is now a dark mode in Thunderbird, making working on email late at night easier on the eyes. To enable, Thunderbird will look at your operating system settings to see if you have enabled dark mode OS-wide.') }}
+        {{ _('There is now a dark mode in Thunderbird, making late-night email easier on the eyes. To enable, Thunderbird will use your operating system settings to see if you have enabled dark mode OS-wide.') }}
       </p>
     </aside>
   </section>
@@ -38,10 +38,10 @@
         {{ _('Account Setup & Account Central Updated')}}
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-8 mt-0">
-        {{ _('The Account Setup window and the Account Central tab, which appears when you do not have an account setup or when you select an existing account in the folder tree, have both been updated.') }}
+        {{ _('The Account Setup window and the Account Central tab have both been updated. The Account Central tab appears when you do not have an account setup, or when you select an existing account in the folder tree.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1 p-links-blue">
-        {{ _('The layout and dialogues have been improved in order to make it easier to understand the information displayed and to find relevant settings. The Account Central tab also has new information about the Thunderbird project and displays the version you are using.') }}
+        {{ _('The layout and dialogues have been improved to make it easier to understand the information displayed and to find relevant settings. The Account Central tab also has new information about the Thunderbird project and displays the version you are using.') }}
       </p>
     </aside>
 
@@ -52,10 +52,10 @@
         {{ _('Options/Preferences in a Tab')}}
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-8 mt-0">
-        {{ _('The compose window has been reworked to help users find features more easily and to make composing a message faster and more straightforward. The compose window now also takes up less space with recipients listed in “pills” instead of an entire line for every address.') }}
+        {{ _('The compose window has been reworked to make composing a message faster, easier and more straightforward. The compose window now also takes up less space with recipients listed in “pills” instead of an entire line for each address.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
-        {{ _('The redesigned compose window makes it easier for the management of many email recipients, and the new intuitive layout for the window it easier to discover its features.') }}
+        {{ _('The redesigned compose window makes it easier to manage many email recipients, and the new intuitive layout helps users to discover its features.') }}
       </p>
     </aside>
   </section>
