Fix a heading and add URL to encryption article for 78 whatsnew page.

--- a/website/thunderbird/78.0/whatsnew/index.html
+++ b/website/thunderbird/78.0/whatsnew/index.html
@@ -49,7 +49,7 @@
       <img class="w-full h-auto mb-10 max-w-lg self-center shadow-lg" src="{{ static('/media/img/thunderbird/whatsnew/78/compose-window.png') }}" alt="Screenshot showing various updates to the compose window for 78.">
       <h3 class="header-section">
         <span>{{ svg('settings') }}</span>
-        {{ _('Options/Preferences in a Tab')}}
+        {{ _('Redesigned Compose Window')}}
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-8 mt-0">
         {{ _('The compose window has been reworked to make composing a message faster, easier and more straightforward. The compose window now also takes up less space with recipients listed in “pills” instead of an entire line for each address.') }}
@@ -69,7 +69,7 @@
         {{ _('End-to-End Encrypted Email Support')}}
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-10">
-        {{ _('End-to-end encryption for email can be used to ensure that only the sender and the recipients of a message can read the contents. Without this protection it is easy for network administrators, email providers and government agencies to read your messages. If you would like to learn more about how end-to-end encryption in Thunderbird works, check out our article: <a href="%(encryption)s">Introduction to End-to-end encryption in Thunderbird</a>.')|format(encryption='https://www.thunderbird.net/en-US/thunderbird/78.0/releasenotes/') }}
+        {{ _('End-to-end encryption for email can be used to ensure that only the sender and the recipients of a message can read the contents. Without this protection it is easy for network administrators, email providers and government agencies to read your messages. If you would like to learn more about how end-to-end encryption in Thunderbird works, check out our article: <a href="%(encryption)s">Introduction to End-to-end encryption in Thunderbird</a>.')|format(encryption='https://support.mozilla.org/kb/introduction-to-e2e-encryption') }}
       </p>
     </aside>
   </section>
