78 whatsnew page copy edits.

--- a/website/thunderbird/78.0/whatsnew/index.html
+++ b/website/thunderbird/78.0/whatsnew/index.html
@@ -10,7 +10,7 @@
   <section class="text-left text-white flex flex-col items-start lg:w-full max-w-6xl mx-auto pl-8 pr-8">
     <h1 class="font-4xl md:font-hero font-thin md:mt-10 mb-8">{{ self.page_title() }}</h1>
     <p class="font-lg md:font-xl tracking-wide leading-relaxed max-w-4xl mb-16 mt-0 p-links">
-      {{ _('This article describes some of the major changes visible to users in Thunderbird version 78. Full details of all the changes can be found in the <a href="%(release)s">Thunderbird release notes from 78.0 - 78.2.2</a>.')|format(release=url('thunderbird.releases.index')) }}
+      {{ _('This article describes some of the major changes visible to users in Thunderbird version 78. Full details of all the changes can be found in the <a href="%(release)s">Thunderbird release notes from 78.0 and up</a>.')|format(release=url('thunderbird.releases.index')) }}
       </p>
   </section>
 {% endblock %}
@@ -84,7 +84,7 @@
         {{ _('There are many other big changes that make Thunderbird 78 a very large release including: calendar and tasks are now integrated into Thunderbird, folder icons are now updated and their colors are customizable, the preferences are now searchable, and minimize to tray is now supported on Windows.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('There are many other updates in this release, you can see them in the release notes for <a href="%(release)s">Thunderbird 78.0 - 78.2.2</a>.')|format(release=url('thunderbird.releases.index')) }}
+        {{ _('There are many other updates in this release, you can see them in the release notes for <a href="%(release)s">Thunderbird 78.0 and up</a>.')|format(release=url('thunderbird.releases.index')) }}
       </p>
     </aside>
   </section>
