Copy adjustment for 78 whatsnew page.

--- a/website/thunderbird/78.0/whatsnew/index.html
+++ b/website/thunderbird/78.0/whatsnew/index.html
@@ -69,7 +69,7 @@
         {{ _('End-to-End Encrypted Email Support')}}
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-10">
-        {{ _('End-to-end encryption for email can be used to ensure that only the sender and the recipients of a message can read the contents. Without this protection it is easy for network administrators, email providers and government agencies to read your messages. If you would like to learn more about how end-to-end encryption in Thunderbird works, check out our article: <a href="%(encryption)s">Introduction to End-to-end encryption in Thunderbird</a>.')|format(encryption='https://support.mozilla.org/kb/introduction-to-e2e-encryption') }}
+        {{ _('End-to-end encryption for email can be used to ensure that only the sender and the recipients of a message can read the contents. Without this protection it is easy for email providers and mass surveillance to read your messages. If you would like to learn more about how end-to-end encryption in Thunderbird works, check out our article: <a href="%(encryption)s">Introduction to End-to-end encryption in Thunderbird</a>.')|format(encryption='https://support.mozilla.org/kb/introduction-to-e2e-encryption') }}
       </p>
     </aside>
   </section>
