More copy changes for 78 whatsnew page.

--- a/website/thunderbird/78.0/whatsnew/index.html
+++ b/website/thunderbird/78.0/whatsnew/index.html
@@ -84,7 +84,7 @@
         {{ _('There are many other big changes that make Thunderbird 78 a very large release including: calendar and tasks are now integrated into Thunderbird, folder icons are now updated and their colors are customizable, the preferences are now searchable, and minimize to tray is now supported on Windows.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('There are many other updates in this release, you can see them in the release notes for <a href="%(release)s">Thunderbird 78.0 and up</a>.')|format(release=url('thunderbird.releases.index')) }}
+        {{ _('You can see details of all our changes in the release notes for <a href="%(release)s">Thunderbird 78.0 and up</a>.')|format(release=url('thunderbird.releases.index')) }}
       </p>
     </aside>
   </section>
