Reduce margin above main screenshot on front page.

--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
 {% block page_desc %}{{ _('Thunderbird is a free email application that’s easy to set up and customize - and it’s loaded with great features!') }}{% endblock %}
 
 {% block header_content %}
-  <section class="text-center text-white flex flex-col items-center mb-6 pr-4 pl-4">
+  <section class="text-center text-white flex flex-col items-center mb-6 md:mb-0 pr-4 pl-4">
     <h1 class="font-4xl md:font-hero font-thin md:mt-10 mb-8">{{ self.page_title() }}</h1>
     <p class="font-lg md:font-xl tracking-wide leading-relaxed max-w-xl mb-8 md:mb-16">{{ self.page_desc() }}</p>
     <div class="tracking-wider">
