--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -42,73 +42,20 @@
 
   <section class="pt-10 pb-10 flex flex-col max-w-6xl mx-auto justify-between pl-8 pr-8">
     <aside>
-      <h3 class="header-section" id="release-engineer">
-        <a class="anchor" aria-hidden="true" href="#release-engineer">
-          {{ svg('link') }}
-        </a>
-        <span>{{ svg('developer') }}</span>
-        <aside class="flex flex-col">
-          {{ _('Thunderbird Release Engineer / Web Infra Engineer')}}
-          <small class="font-normal font-md tracking-normal normal-case">
-            {{ _('Full Time / Remote') }}
-          </small>
-        </aside>
-      </h3>
-      <p class="font-lg tracking-wider leading-loose mb-5 p-links-blue">
-        {{ _('Thunderbird is looking for a multi-skilled self-starter to work partly on release engineering, and partly on operating the cloud based web infrastructure around Thunderbird. You will be working in close cooperation with our release engineer, infra engineer and other staff, as well as with community members.') }}
-      </p>
-      <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, Matrix, and Bugzilla.') }}
-      </p>
-      <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('As a release engineer you will be serving the community, empowering them to make their contributions available to millions of people worldwide. Your focus will be on developing and maintaining the systems that are used for continuous integration and for making the final builds of the software available to end users. A large part of this is following and adjusting to improvements made by the Firefox release engineering team, since Thunderbird uses very similar tools and procedures. You will collaborate with <strong>QA</strong>, <strong>security</strong>, <strong>localization</strong>, and engineering to ship beta and release builds.') }}
-      </p>
-      <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('The Thunderbird project operates some server side infrastructure, such as the <a href="https://thunderbird.net/">thunderbird.net</a> web site and <a href="https://addons.thunderbird.net/">addons.thunderbird.net</a>. As a web infra engineer you will be involved with infrastructure maintenance and development and of these web sites. The job involves full stack development of these properties, as well as monitoring their cloud based deployments.') }}
-      </p>
-    </aside>
-    <aside>
-      <h4 class="subheader-section">{{ _('We’re looking for someone with:') }}</h4>
-      <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
-        <li>
-          {{ _('Solid scripting knowledge (shell, Python).') }}
-        </li>
-        <li>
-          {{ _('Familiarity with using distributed version control systems (preferably Mercurial).') }}
-        </li>
-        <li>
-          {{ _('Experience with <a href="https://docs.taskcluster.net/">Taskcluster</a> is highly desirable.') }}
-        </li>
-        <li>
-          {{ _('Good pattern matching abilities.') }}
-        </li>
-        <li>
-          {{ _('Devops knowledge for cloud based setups (AWS, Linode etc.)') }}
-        </li>
-        <li>
-          {{ _('Capability of full stack web development (especially Python-based backends)') }}
-        </li>
-      </ul>
-      <a href="#apply" class="btn-join self-start">{{ _('How to Apply')}}</a>
-    </aside>
-  </section>
-
-  <section class="pt-10 pb-10 flex flex-col max-w-6xl mx-auto justify-between pl-8 pr-8">
-    <aside>
       <h3 class="header-section" id="senior-software-engineer">
         <a class="anchor" aria-hidden="true" href="#senior-software-engineer">
           {{ svg('link') }}
         </a>
         <span>{{ svg('developer') }}</span>
         <aside class="flex flex-col">
-          {{ _('Senior Software Engineers')}}
+          {{ _('Senior Software Engineer')}}
           <small class="font-normal font-md tracking-normal normal-case">
-            {{ _('Full Time / Remote / 2 Available Openings') }}
+            {{ _('Full Time / Remote') }}
           </small>
         </aside>
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-5 p-links-blue">
-        {{ _('Thunderbird is looking to hire two senior software engineers to join the team. You will help modernize the codebase and design new features for this already very popular cross platform email client. We’re committed to moving the code base over to using primarily web technologies, and you’ll be part of this effort. Contrary to many opportunities elsewhere, you have the opportunity to directly utilize the most cutting edge developments in the browser engine.') }}
+        {{ _('Thunderbird is looking to hire a senior software engineer to join the team. You will help modernize the codebase and design new features for this already very popular cross platform email client. We’re committed to moving the code base over to using primarily web technologies, and you’ll be part of this effort. Contrary to many opportunities elsewhere, you have the opportunity to directly utilize the most cutting edge developments in the browser engine.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
         {{ _('As an engineer at Thunderbird, you will be working with existing staff and community members from all over the globe. We work very much in the open, and you’ll be able to show your skills to the world both on the code level and as a concrete result in improvements on the product.') }}
@@ -174,14 +121,14 @@
         </a>
         <span>{{ svg('developer') }}</span>
         <aside class="flex flex-col">
-          {{ _('Software Engineers')}}
+          {{ _('Software Engineer')}}
           <small class="font-normal font-md tracking-normal normal-case">
-            {{ _('Full Time / Remote / Multiple Available Openings') }}
+            {{ _('Full Time / Remote') }}
           </small>
         </aside>
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-5 p-links-blue">
-        {{ _('The Thunderbird team is expanding and wants to hire a few more passionate engineers to work with us on ongoing maintenance work as well as feature development.') }}
+        {{ _('The Thunderbird team is expanding and wants to hire a passionate engineer to work with us on ongoing maintenance work as well as feature development.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
         {{ _('We’re committed to moving the code base over to using primarily web technologies, and you’ll be part of this effort. Contrary to many opportunities elsewhere, you’ll have the opportunity to utilize the most cutting edge developments in the browser engine.') }}
